Update image paths to use capital 'I' in 'Images'

--- a/index.html
+++ b/index.html
@@ -480,12 +480,12 @@
     <div id="screen-gallery" class="container">
         <h1>Look at this cutie 🥰</h1>
         <div class="gallery">
-            <img src="images/1.jpg" alt="Memory">
-            <img src="images/2.jpg" alt="Memory">
-            <img src="images/3.jpg" alt="Memory">
-            <img src="images/4.jpg" alt="Memory">
-            <img src="images/5.jpg" alt="Memory">
-            <img src="images/6.jpg" alt="Memory">
+            <img src="Images/1.jpg" alt="Memory">
+            <img src="Images/2.jpg" alt="Memory">
+            <img src="Images/3.jpg" alt="Memory">
+            <img src="Images/4.jpg" alt="Memory">
+            <img src="Images/5.jpg" alt="Memory">
+            <img src="Images/6.jpg" alt="Memory">
         </div>
         <button class="back-btn" onclick="goToScreen('screen-menu')">Back to Menu</button>
     </div>
