Update image file extensions from .jpg to .JPG

--- a/index.html
+++ b/index.html
@@ -480,12 +480,12 @@
     <div id="screen-gallery" class="container">
         <h1>Look at this cutie 🥰</h1>
         <div class="gallery">
-            <img src="Images/1.jpg" alt="Memory">
-            <img src="Images/2.jpg" alt="Memory">
-            <img src="Images/3.jpg" alt="Memory">
-            <img src="Images/4.jpg" alt="Memory">
-            <img src="Images/5.jpg" alt="Memory">
-            <img src="Images/6.jpg" alt="Memory">
+            <img src="Images/1.JPG" alt="Memory">
+            <img src="Images/2.JPG" alt="Memory">
+            <img src="Images/3.JPG" alt="Memory">
+            <img src="Images/4.JPG" alt="Memory">
+            <img src="Images/5.JPG" alt="Memory">
+            <img src="Images/6.JPG" alt="Memory">
         </div>
         <button class="back-btn" onclick="goToScreen('screen-menu')">Back to Menu</button>
     </div>
