--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         <div class="gif-container">
             <img id="proposalGif" src="https://media.tenor.com/N7GiO8UsfooAAAAj/bubu-dudu-heart.gif" alt="Cute Bear">
         </div>
-        <h1>Will you be mine? 🥺</h1>
+        <h1>Hmra se Biyah karab? 🥺</h1>
         <p>Life is an incredible journey, and I want to spend every single second of it with you.</p>
         <div class="btn-group">
             <button class="btn-yes" id="yesBtn" onclick="celebrateYes()">YES</button>
@@ -447,7 +447,7 @@
     </div>
 
     <div id="screen-menu" class="container">
-        <h1>Happy Valentine's Day hmr bacha 💖</h1>
+        <h1>I love you bahut saara hmr bacha 💖</h1>
         <p>Ham aabe na sakli aaha ke pass oise ye banailee🥺</p>
         
         <div class="gift-grid">
